--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,6 +18,7 @@ jobs:
           if [ "${{ github.ref_type }}" = "tag" ]; then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             echo "tag_name=$TAG_NAME" >> GITHUB_OUTPUT
+            echo $TAG_NAME
           else
             echo "No tag"
             exit 1
