--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,11 +14,4 @@ jobs:
       - name: Extract tag name
         id: release
         run: |
-          if [ "${{ github.ref_type }}" = "tag" ]; then
-            TAG_NAME=${GITHUB_REF#refs/tags/}
-            echo "tag_name=$TAG_NAME" >> GITHUB_OUTPUT
-            echo $TAG_NAME
-          else
-            echo "No tag"
-            exit 1
-          fi
+          echo "Ran after release"
